# iso4217parse

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  gen_data.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: CI.yml
iso4217parse/: __init__.py  data.json  symbols.json
tests/: test_by_alpha3.py  test_by_code_num.py  test_by_country.py  test_by_symbol.py  test_by_symbol_match.py  test_parse.py
