[flake8]
max-line-length = 159
max-complexity = 10
import-order-style = google
exclude = gen_data.py

[tool:pytest]
python_paths = .
addopts = --cov=iso4217parse --cov-report=term-missing --flake8 -v -s

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE.txt
