[flake8]
application_import_names = iso4217parse
max-line-length = 159
max-complexity = 10
import-order-style = google
exclude =
    .venv/
    venv/
    gen_data.py

[tool:pytest]
python_paths = .
ignore = gen_data.py
addopts = --cov=iso4217parse --cov-report term-missing --cov-report html:cov_html -v

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
description-file = README.md
